--- a/keyboard.toml
+++ b/keyboard.toml
@@ -12,12 +12,12 @@ rows = 9
 cols = 6
 layers = 5
 matrix_map = """
-(0, 0)  (0, 1)  (0, 2)  (0, 3)  (0, 4)  (0, 5)    (5, 0)  (5, 1)  (5, 2)  (5, 3)  (5, 4)  (5, 5)
-(1, 0)  (1, 1)  (1, 2)  (1, 3)  (1, 4)  (1, 5)    (6, 0)  (6, 1)  (6, 2)  (6, 3)  (6, 4)  (6, 5)
-(2, 0)  (2, 1)  (2, 2)  (2, 3)  (2, 4)  (2, 5)    (7, 0)  (7, 1)  (7, 2)  (7, 3)  (7, 4)  (7, 5)
-                (3, 2)  (3, 3)                                    (8, 2)  (8, 3)
-                          (4, 3)  (4, 4)  (4, 5)
-                          (4, 0)  (4, 1)  (4, 2)
+(0, 0, L)  (0, 1, L)  (0, 2, L)  (0, 3, L)  (0, 4, L)  (0, 5, L)    (5, 0, R)  (5, 1, R)  (5, 2, R)  (5, 3, R)  (5, 4, R)  (5, 5, R)
+(1, 0, L)  (1, 1, L)  (1, 2, L)  (1, 3, L)  (1, 4, L)  (1, 5, L)    (6, 0, R)  (6, 1, R)  (6, 2, R)  (6, 3, R)  (6, 4, R)  (6, 5, R)
+(2, 0, L)  (2, 1, L)  (2, 2, L)  (2, 3, L)  (2, 4, L)  (2, 5, L)    (7, 0, R)  (7, 1, R)  (7, 2, R)  (7, 3, R)  (7, 4, R)  (7, 5, R)
+                      (3, 2, L)  (3, 3, L)                                                (8, 2, R)  (8, 3, R)
+                                        (4, 3, L)  (4, 4, L)  (4, 5, L)
+                                        (4, 0, L)  (4, 1, L)  (4, 2, L)
 """
 
 [aliases]
@@ -25,46 +25,58 @@ matrix_map = """
 [[layer]]
 name = "base"
 keys = """
-grv  Q    W    F    P    G        J    L    U    Y    scln bsls
-caps A    R    S    T    D        H    N    E    I    O    quot
-Left Z    X    C    V    B        K    M    comm dot  slsh rght
+grv  Q     W     F     P     G        J     L     U     Y     scln  bsls
+caps TD(0) TD(1) TD(2) TD(3) TD(4)    TD(5) TD(6) TD(7) TD(8) TD(9) quot
+Left Z     X     C     V     B        K     M     comm  dot   slsh  rght
           lbrc rbrc                         mins eql
-                esc  bspc del
-                Tab  spc  ent
-"""
-
-[[layer]]
-name = "symb"
-keys = """
-grv  Q    W    F    P    G        J    L    U    Y    scln bsls
-caps A    R    S    T    D        H    N    E    I    O    quot
-Left Z    X    C    V    B        K    M    comm dot  slsh rght
-          lbrc rbrc                         mins eql
-                esc  bspc del
-                Tab  spc  ent
+                esc    bspc   MO(1)
+                TD(10) TD(11) TD(12)
 """
 
 [[layer]]
 name = "func"
 keys = """
-grv  Q    W    F    P    G        J    L    U    Y    scln bsls
-caps A    R    S    T    D        H    N    E    I    O    quot
-Left Z    X    C    V    B        K    M    comm dot  slsh rght
-          lbrc rbrc                         mins eql
-                esc  bspc del
-                Tab  spc  ent
+pgup Left Down Up   rght pgdn     pgup Left Down Up   rght pgdn
+mins 5    4    3    2    1        6    7    8    9    0    eql
+F6   F5   F4   F3   F2   F1       F7   F8   F9   F10  F11  F12
+          Home End                         Home End
+                No Bootloader No
+                No Bootloader TG(2)
 """
 
 [[layer]]
 name = "game"
 keys = """
-grv  Q    W    F    P    G        J    L    U    Y    scln bsls
-caps A    R    S    T    D        H    N    E    I    O    quot
-Left Z    X    C    V    B        K    M    comm dot  slsh rght
-          lbrc rbrc                         mins eql
-                esc  bspc del
-                Tab  spc  ent
+M     Tab    Q    W    E    R        T    Y    I    O    P    bspc
+caps  LShift A    S    D    F        3    4    5    6    7    ent
+LCtrl Z      X    C    V    B        N    M    comm dot  slsh F12
+             1    2                            mins eql
+                esc  E    TG(0)
+                Tab  spc  LShift
 """
+
+[behavior.morse]
+enable_flow_tap = true
+prior_idle_time = "120ms"
+unilateral_tap = true
+permissive_hold = true
+hold_timeout = "120ms"
+gap_timeout = "200ms"
+morses = [
+    { tap = "A", hold = "LGui", hold_after_tap = "1" },
+    { tap = "R", hold = "LAlt", hold_after_tap = "2" },
+    { tap = "S", hold = "LCtrl", hold_after_tap = "3" },
+    { tap = "T", hold = "LShift", hold_after_tap = "4" },
+    { tap = "D", hold_after_tap = "5" },
+    { tap = "H", hold_after_tap = "6" },
+    { tap = "N", hold = "RShift", hold_after_tap = "7" },
+    { tap = "E", hold = "RCtrl", hold_after_tap = "8" },
+    { tap = "I", hold = "RAlt", hold_after_tap = "9" },
+    { tap = "O", hold = "RGui", hold_after_tap = "0" },
+    { tap = "Tab", hold = "LShift" },
+    { tap = "spc", hold = "LCtrl" },
+    { tap = "ent", hold = "LGui" },
+]
 
 [split]
 connection = "serial"
