--- a/keyboard.toml
+++ b/keyboard.toml
@@ -29,8 +29,8 @@ grv          Q            W            F             P             G            
 caps         MT(A, lgui)  MT(R, lalt)  MT(S, lctrl)  MT(T, lshift) D                H            MT(N, rshift) MT(E, rctrl)  MT(I, ralt)  MT(O, rgui)  quot
 wbak         Z            X            C             V             B                K            M             comm          dot          slsh         wfwd
                           lbrc         rbrc                                                                    mins          eql
-                                       esc              Tab        MT(del, lalt)
-                                       MT(bspc, lshift) LT(1, spc) MT(ent, lgui)
+                                       MT(esc, lshift) MT(Tab, lctrl) MT(del, lalt)
+                                       bspc            LT(1, spc)     MT(ent, lgui)
 """
 
 [[layer]]
